[gd_scene load_steps=4 format=3 uid="uid://cyx62cj6kw3o7"]

[ext_resource type="Script" path="res://CameraHDK2/CameraHDK2.gd" id="1_pjkae"]
[ext_resource type="Material" uid="uid://bru4dht3xrj84" path="res://CameraHDK2/barrel_shader_material.tres" id="2_fi18t"]
[ext_resource type="PackedScene" uid="uid://dmkiqklx4nqnr" path="res://CameraHDK2/center_cursor.tscn" id="3_ig1jv"]

[node name="CameraHDK2" type="Node3D" node_paths=PackedStringArray("cam_left", "cam_right")]
script = ExtResource("1_pjkae")
cam_left = NodePath("Display/LeftEye/LeftEyeRender/SubViewport/CameraLeft")
cam_right = NodePath("Display/RightEye/RightEyeRender/SubViewport/CameraRight")
cursor_raycast_length = 5.0
cursor_hold_time = 2.0

[node name="Display" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1080, 600)
metadata/_edit_lock_ = true

[node name="RightEye" type="Control" parent="Display"]
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="RightEyeRender" type="SubViewportContainer" parent="Display/RightEye"]
material = ExtResource("2_fi18t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(540, 600)
mouse_filter = 2
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="Display/RightEye/RightEyeRender"]
handle_input_locally = false
screen_space_aa = 1
gui_disable_input = true
size = Vector2i(1080, 1200)
render_target_update_mode = 4

[node name="CameraRight" type="Camera3D" parent="Display/RightEye/RightEyeRender/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0315, 0, 0)
fov = 92.0

[node name="CursorRaycast" type="RayCast3D" parent="Display/RightEye/RightEyeRender/SubViewport/CameraRight"]
target_position = Vector3(0, 0, -5)
collision_mask = 2147483648
collide_with_areas = true

[node name="CenterCursor" parent="Display/RightEye" instance=ExtResource("3_ig1jv")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftEye" type="Control" parent="Display"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="LeftEyeRender" type="SubViewportContainer" parent="Display/LeftEye"]
material = ExtResource("2_fi18t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(540, 600)
mouse_filter = 2
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="Display/LeftEye/LeftEyeRender"]
handle_input_locally = false
screen_space_aa = 1
gui_disable_input = true
size = Vector2i(1080, 1200)
render_target_update_mode = 4

[node name="CameraLeft" type="Camera3D" parent="Display/LeftEye/LeftEyeRender/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0315, 0, 0)
fov = 92.0

[node name="CenterCursor" parent="Display/LeftEye" instance=ExtResource("3_ig1jv")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GrabReference" type="Marker3D" parent="."]
